# blender-mcp-server

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
addon/: __init__.py  models.py
docs/: architecture.md  python-execute-design.md
scripts/: blender_bridge_request.py  blender_create_test_cube.py  blender_scene_info.py  build_addon_zip.sh  launch_blender_gui.py  server_start.sh
scripts/demos/: README.md  dam_break_scene.py  open_dam_break_gui.py  pipe_movement_study.py  pipe_pressure_failure_scene.py  procedural_dam_break_scene.py  run_dam_break.py
src/blender_mcp_server/: headless.py  server.py
tests/: test_addon.py  test_server.py
